--- a/index.html
+++ b/index.html
@@ -40,8 +40,20 @@
               </div>
               <div class="six wide column">
                 <!-- Languages -->
+                <section>
+                  <h3>Languages</h3>
+                  <p class="tags small"><a href="/uk-ua" hreflang="uk" rel="alternate" class="language" lang="uk">&#x1f1fa;&#x1f1e6; <span>УКРАЇНСЬКА</span></a> <a href="/ru-ru" hreflang="ru" rel="alternate" class="language" lang="ru">&#x1f1f7;&#x1f1fa; <span>РУССКИЙ</span></a> <span class="language" lang="en">&#x1f1fa;&#x1f1f8; ENGLISH</span></p>
+                </section>
                 <!-- Skills -->
+                <section>
+                  <h3>Skills</h3>
+                  <p class="tags small">HTML CSS JS PHP BOILERPLATE BOOTSTRAP <span class="nowrap">SEMANTIC UI</span> LESS SASS JQUERY ANGULARJS REACT REDUX LODASH GRUNT GULP BOWER WEBPACK NODEJS NPM <span class="nowrap">MICROSOFT OFFICE</span> PHOTOSHOP ILLUSTRATOR DELPHI VB VBA VBSCRIPT LINUX WINDOWS MACOS MYSQL POSTGRESQL MICROSOFT SQL DB2 CCNA ITIL</p>
+                </section>
                 <!-- Character -->
+                <section>
+                  <h3>Character</h3>
+                  <p class="tags small">EXPLORER STRAIGHTFORWARD <a href="https://www.16personalities.com/entp-personality" rel="external">DEBATER</a> DEVOTED PEDANTIC AGNOSTIC CONTENTIOUS PROCRASTINATOR RELEVANT EMPATHETIC STORYTELLER CONFIDENT CONSISTENT CHALLENGING</p>
+                </section>
                 <!-- Likes -->
                 <!-- Dislikes -->
                 <!-- Wants -->
