--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="description" content="My very own personal website.">
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">  </head>
   <body>
+    <header>
+        <div class="credits">
+          <strong>Sponsored by <a href="https://jojo.fandom.com/ru/wiki/%D0%A4%D0%BE%D0%BD%D0%B4_%D0%A1%D0%BF%D0%B8%D0%B4%D0%B2%D0%B0%D0%B3%D0%BE%D0%BD%D0%B0"
+          rel="external">Speedwagon Foundation</a></strong>
+        </div>
+    </header>	
     <main>
       <article>
         <div class="page" style="border-color: midnightblue;">
