--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <div class="three wide center aligned column">
                 <!-- Avatar -->
                 <div class="avatar-wrapper">
-                  <object class="avatar" data="./assets/images/avatar.svg" role="img" aria-label="My profile picture"></object>
+                  <object class="avatar" data="./img/avatar.jpg" role="img" aria-label="DIO"></object>
                 </div>
               </div>
               <div class="thirteen wide column">
