Add custom intro

--- a/index.html
+++ b/index.html
@@ -79,9 +79,18 @@
                   </div>
                   <div class="sixteen wide column">
                     <!-- Intro -->
-                    <h2>Résumé</h2>
-                    <p>&mdash; Hello! I’m a skilled frontend developer<strong style="margin-left: 0.0625em;">*</strong> with 7 years of experience in UI/UX design, application development, and database modeling. I strive to craft precise, responsive, fast, easy-to-use environments with both strong purpose and great looks.</p>
-                    <p style="opacity: 0.75;"><strong style="margin-right: 0.0625em;">*</strong>I feel like it's 40-60 by <a href="https://css-tricks.com/the-great-divide/" rel="external">The Great Divide</a> into JavaScript engineer and UX engineer</p>
+                    <h2>Резюме</h2>
+                    <p>&mdash; Ви думали, що це звичайне резюме?! Але це я, Діо! Я головний антагоніст
+                        саги JoJo's Bizarre Adventure, до того ж вампір і маю крутий станд 
+                        &#763;<small> <a href="https://jojo.fandom.com/ru/wiki/The_World" rel="external">T H E W O R L D</a></small>&#762; !
+                        Я відмінний маніпулятор і стратег, і моя головна ціль &#8211; знищити сімейство клятих Джостарів
+                        (на жаль, минулі дві спроби не були достатньо успішними). Якщо вам треба когось анігілювати &#8211; 
+                        ви знаєте до кого звернутися.
+                    </p>
+                    <p style="opacity: 0.75;">
+                      Is that a <a href="https://www.quora.com/Why-is-everything-a-Jojo-reference"
+                                          rel="external">JoJo reference</a>?!
+                    </p>
                   </div>
                 </div>
               </div>
