Add experience and timeline

--- a/index.html
+++ b/index.html
@@ -103,6 +103,299 @@
             <div class="row">
               <div class="ten wide column">
                 <!-- Experience -->
+                <section>
+                    <h3>Досвід</h3>
+                    <h6>Тепер</h6>
+                    <ul class="timeline">
+                      <li class="highlighted">
+                        <p><em>1988 – сьогодні</em></p>
+                        <p>
+                            На жаль моя остання пригода закінчилася не дуже вдало 😒,
+                            тому наразі я відпочиваю у садах Едему.
+                        </p>
+                      </li>
+                    </ul>
+                    <h6>Професійні навички</h6>
+                    <ul class="timeline">
+                      <li>
+                        <p><strong>Як вампіра</strong></p>
+                        <ol class="inverted">
+                          <li>
+                            <p><strong>Абсолютна невразливість </strong> (сонце не рахуємо, камон)
+                            </p>
+                            <ul>
+                              <li>
+                                  Як і будь-якого вампіра мене досить <strong>складно перемогти</strong>, адже я
+                                  можу швидко регенерувати будь-які рани.
+                                  До того ж маю відмінну спритність і реакцію.
+                                  І, звичайно, прекрасно бачу уночі.
+                              </li>
+                              <li>
+                                  На мене <strong>не діють</strong> усякі там <strong>часники, срібло, осиновий кіл</strong>.
+                                  Де ви взагалі цього набралися? Маячня якась.
+                              </li>
+                            </ul>
+                           </li>
+                           <li>
+                              <p>Можу створити для вас цілу <strong>армію нежиті</strong>, деталі за телефоном
+                                  мого менеджера у секції "Контакти".
+                              </p>
+                              <ul>
+                                      <li class="details">
+                                              <input type="checkbox" id="project-3">
+                                              <label for="project-3" class="summary">
+                                                  Ось докладний список усіх <strong>вампірських навичок</strong>, 
+                                                  які можуть бути вам корисними. 
+                                              </label>
+                                              <div class="labels">
+                                                  <a rel="external" class="label"
+                                                      href="">гіпноз</a>
+                                                  <a rel="external" class="label"
+                                                      href="">круті бойові кличі</a>
+                                                  <a rel="external" class="label"
+                                                      href="">контроль свідомості</a>
+                                                  <a rel="external" class="label"
+                                                      href="">заморозка продуктів і людей</a>
+                                                  <a rel="external" class="label"
+                                                      href="">жартую, не продуктів</a>
+                                                  <a rel="external" class="label"
+                                                      href="">пафосні пози</a>
+                                                  <a rel="external" class="label"
+                                                      href="">ні, на мишу не можу перетворитись</a>
+                                                  <a rel="external" class="label"
+                                                      href="">це тупо і не солідно</a>
+                                                  <a rel="external" class="label"
+                                                      href="">можу ходити по стінам</a>
+                                              </div>
+                                          </li>
+                                          </ul>
+                                      </li>
+                                  </ol>
+                              </li>
+                            <li>
+                                  <p><strong>Як власника станду</strong></p>
+                                  <p>
+                                      Як я вже казав, я маю крутий станд &#763;<small>T H E W O R L D</small>&#762;.
+                                      Це <strong>моя суперздібність</strong>, якa уособлює собою мою волю (нестримну і міцну). 
+                                      Ось навички мого станду:
+                                  </p>
+                        <ol class="inverted">
+                          <li>
+                            <p>
+                                Нестримна <strong>сила і швидкість</strong>.
+                            </p>
+                            <ul>
+                                <li>
+                                    Мій стенд володіє неабиякою силою та реакцією, і я повністю контролюю її. 
+                                    <a rel="external"
+                                        href="https://www.youtube.com/watch?v=Jh-H4Dwv5GQ&t=2m08s">Пруфи </a>(я зліва).                                                         
+                                </li>
+                            </ul>
+                          </li>
+                          <li>
+                              <p>Можe <strong>зупиняти плин часу.</strong></p>
+                              <ul>
+                                      <li>
+                                          спочатку міг зупиняти час на 5 секунд (це дивно звучить, але так).
+                                      </li>
+                                      <li>
+                                          але після того як я поживився кров'ю Джостарів цифра скакнула до 9  секунд.
+                                      </li>
+                                  </ul>
+                          </li>
+                        </ol>
+                      </li>
+                    </ul>
+                    <h6>Трохи раніше...</h6>
+                    <ul class="timeline">
+                      <li>
+                          <p><em>1988</em></p>
+                          <p>
+                              Не було такого ніколи і ось знову! Я 
+                              <strong>переможений черговим <a href="https://jojo.fandom.com/ru/wiki/%D0%94%D0%B6%D0%BE%D1%82%D0%B0%D1%80%D0%BE_%D0%9A%D1%83%D0%B4%D0%B6%D0%BE">
+                              ДжоДжо</a></strong>... Цьому хлопчиську всього сімнадцять, а він зумів подолати мене, 
+                              величного і страшного Діо. Схоже, я десь звернув не туди 😩.
+                          </p>
+                      </li>
+                      <li>
+                        <p><em>1987</em></p>
+                        <p>
+                            У мене <strong>народився <a href="https://www.youtube.com/watch?v=2MtOpB5LlUA&t=3m45s">
+                            син</a></strong> 👶! Через шістнадцять років він переможе боса 
+                            італійської мафії, але тільки заради того, щоб зайняти його місце 😡.
+                        </p>
+                      </li>
+                      <li>
+                        <p><em>1987</em></p>
+                        <p>
+                            З новою силою можна <strong>потягатись і з новим поколінням Джостарів</strong>! 
+                            Ну, цього разу точно переможу!
+                        </p>
+                      </li>
+                      <li>
+                        <p><em>1986</em></p>
+                        <p>
+                            Пум-пум ту-ту-ту я <strong>отримав станд</strong>! 
+                            Для тих хто не в темі <strong>станд &#8211; це суперздібність</strong>, 
+                            що втілює собою волю свого володара. Моя воля міцна як сталь, тож станд я 
+                            отримав настільки ж сильний.
+                        </p>
+                      </li>
+                      <li>
+                        <p><em>1985</em></p>
+                        <p>
+                            Хо-хо-хо! Доля накінець посміхнулася мені! З дна океану мене випадково підняли 
+                            якісь шукачі скарбів. Ну, мені, звичайно, приємно, що навіть через сто років 
+                            мене цінять настільки сильно 😂, але це не врятувало бідолаг від моєї жаги крові. 
+                            Тим паче, останні промені сонця тоді якраз опускалися за горизонт...
+                        </p>
+                      </li>
+                      <li>
+                        <p><em>1879 - 1985</em></p>
+                        <p>
+                            Лежу на дні <strong>Атлантичного океану</strong> та рахую баранців.
+                        </p>
+                      </li>
+                      <li>
+                        <p><em>1879</em></p>
+                        <ul>
+                          <li class="details">
+                            <input type="checkbox" id="fight">
+                            <label for="fight" class="summary">
+                                Тут буде <strong>довгий опис</strong> наших з Джонатаном <strong>махачів</strong>. 
+                                Для нетепрлячих скажу відверто і коротко: я недооцінив цього недоумка, через що пролежав
+                                більше ста років на морському дні. Хоча і отримав вампірські здібності.
+                            </label>
+                            <div>
+                              <ul>
+                                <li>перша битва сталася у маєтку, де він превсилюдно розкрив мої інтриги. 
+                                    Коли я зрозумів, що програв, я одягнув кам'яну маску та перетворився на вампіра. 
+                                    Спалив дотла маєток, але так і не зміг перемогти Джонатана (ну він же протагоніст, що ви хотіли).
+                                </li>
+                                <li>
+                                    наступного разу ми зустрілися на моїй території. Я створив цілу армію нежиті, 
+                                    але мій супротивник також не зволікав і освої якесь дивне <a rel="external" href="https://jojo.fandom.com/ru/wiki/%D0%A5%D0%B0%D0%BC%D0%BE%D0%BD">
+                                    сонячне карате</a> зі смішною назвою. 
+                                    Доречі, сонце, як і будь-який вампір я не дуже полюбляю. Закінчилося це все моєю повною поразкою 😢.
+                                </li>
+                                <li>
+                                    наш останній бій відбувся на кораблі, на якому Джонатан зі своєю дружиною відпливав у 
+                                    медовий місяць. У мене накінець вийшло перемогти його, але він заточив мене на морському дні 
+                                    більше як на сто років! :( До того ж, зумів врятувати свою дружину. Що тут скажеш &#8211; 
+                                    типічний головний герой.
+                                </li>
+                              </ul>
+                            </div>
+                          </li>
+                        </ul>
+                        </li>
+                        <li>
+                            <p><em>1879</em></p>
+                            <p>
+                                Відкриваю секрет <strong>кам'яної маски</strong>.
+                                Якщо надягнути її на людину, то вона перетворить носія
+                                на вампіра! Тепер мене ніщо не зупинть!
+                            </p>
+                        </li>
+                      <li>
+                        <p><em>1879</em></p>
+                        <p><strong>Нарешті готовий! </strong> 
+                            Підмішую отурту у вино Джорджа, але Джонатан починає щось підозрювати...
+                        </p>
+                      </li>
+                      <li>
+                          <p><em>1878</em></p>
+                          <p>Планую усунути голову сім'ї за допомогою отрути (і всю вину перекласти на Джонатана). 
+                              Кажуть, що це зброя боягузів, але заради спадку я піду на все.
+                          </p>
+                      </li>
+                      <li>
+                        <p><em>1870 &ndash; 1878</em></p>
+                        <ul>
+                          <li class="details">
+                            <input type="checkbox" id="goldfish">
+                            <label for="goldfish" class="summary">
+                              <strong>Живу і процвітаю</strong> як <strong>справжній аристократ</strong>
+                            </label>
+                            <div>
+                              <ul>
+                                <li>
+                                    відмінно навчаюсь у коледжі
+                                </li>
+                                <li>
+                                    стаю хлопцем "на масі"
+                                </li>
+                                <li>
+                                    намагаюсь втертися в довіру до Джонатана 
+                                    щоб він не заважав мені плести інтриги проти їх сімейства
+                                </li>
+                              </ul>
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                            <p><em>1871</em></p>
+                            <ul>
+                                <li class="details">
+                                    <input type="checkbox" id="inheritor">
+                                    <label for="inheritor" class="summary">
+                                        <strong>Перетворюю життя</strong> спадкоємця <strong>на пекло</strong>
+                                    </label>
+                                    <div>
+                                        <ul>
+                                            <li>
+                                                відбиваю у нього гарненьку дівчину 
+                                                (якщо начистоту, у Джонатана все одно ніяких шансів).
+                                            </li>
+                                            <li>
+                                                виставляю його йолопом перед усім містом, тож навряд чи він 
+                                                тепер знайде собі друзів.
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                        <p><em>1870</em></p>
+                        <ul>
+                          <li class="details">
+                            <input type="checkbox" id="estate">
+                            <label for="estate" class="summary">
+                              <strong>Вриваюся в маєток Джостарів</strong> наче грім серед ясного неба!
+                            </label>
+                            <div>
+                              <ul>
+                                <li>
+                                    Першого ж дня показую свій характер та сварюся
+                                    з Джонатаном Джостаром &#8211; молодим спадкоємцем 
+                                    цієї багатої сім'ї. Тепер він знає, що я не простолюдин з вулиці.
+                                </li>
+                                <li>
+                                    Виставляю себе у найліпшому вигляді перед головою сім'ї,
+                                    Джорджом Джостаром, чим з першого ж дня завойовую його довіру.
+                                </li>
+                              </ul>
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <p><em>1868</em></p>
+                        <p>
+                            Випадково мій батько <strong>рятує сім'ю багатих аристократів</strong>, Джостарів, тож як тільки я 
+                            увійду у свідомий вік, для мене відкриються двері їх сімейного маєтку.
+                        </p>
+                      </li>
+                      <li>
+                        <p><em>1867</em></p>
+                        <p><strong>Народився</strong> у <strong>Великій Британії</strong>,
+                            в бідній і нещасливій сім'ї. Але я з дитинства знав, що багато чого досягну у житті.
+                        </p>
+                      </li>
+                    </ul>
+                  </section>    
               </div>
               <div class="six wide column">
                 <!-- Languages -->
