Add custom skills

--- a/index.html
+++ b/index.html
@@ -401,8 +401,12 @@
                 <!-- Languages -->
                 <!-- Skills -->
                 <section>
-                  <h3>Skills</h3>
-                  <p class="tags small">HTML CSS JS PHP BOILERPLATE BOOTSTRAP <span class="nowrap">SEMANTIC UI</span> LESS SASS JQUERY ANGULARJS REACT REDUX LODASH GRUNT GULP BOWER WEBPACK NODEJS NPM <span class="nowrap">MICROSOFT OFFICE</span> PHOTOSHOP ILLUSTRATOR DELPHI VB VBA VBSCRIPT LINUX WINDOWS MACOS MYSQL POSTGRESQL MICROSOFT SQL DB2 CCNA ITIL</p>
+                    <h3>Навички</h3>
+                    <p class="tags small">
+                        ХОДИТИ ПО СТІНАМ, ПИТИ КРОВ, ВИЖИВАТИ ПІСЛЯ БУДЬ-ЯКИХ УШКОДЖЕНЬ,
+                        СТВОРЮВАТИ НЕЖИТЬ, МОРОЗИТИ ВСІХ І ВСЯ, СТРІЛЯТИ ОЧИМА, ВВОДИТИ У ГІПНОЗ,
+                        КОНТРОЛЮВАТИ СВІДОМІСТЬ
+                    </p>
                 </section>
                 <!-- Character -->
                 <section>
