Add custom character section

--- a/index.html
+++ b/index.html
@@ -410,8 +410,11 @@
                 </section>
                 <!-- Character -->
                 <section>
-                  <h3>Character</h3>
-                  <p class="tags small">EXPLORER STRAIGHTFORWARD <a href="https://www.16personalities.com/entp-personality" rel="external">DEBATER</a> DEVOTED PEDANTIC AGNOSTIC CONTENTIOUS PROCRASTINATOR RELEVANT EMPATHETIC STORYTELLER CONFIDENT CONSISTENT CHALLENGING</p>
+                    <h3>Характер</h3>
+                    <p class="tags small">
+                        САМОВПЕВНЕНИЙ, НА СТИЛІ, МАНІПУЛЯТОР, СТРАТЕГ, БЕЗПРИНЦИПНИЙ, НАРЦИС, 
+                        BADASS, ПОСТІЙНО ПРАГНУ КРАЩОГО, ЦІНУЮ ВІРНІСТЬ
+                    </p>
                 </section>
                 <!-- Likes -->
                 <!-- Dislikes -->
