Add custom Dislikes section

--- a/index.html
+++ b/index.html
@@ -442,6 +442,13 @@
                     </p>
                 </section>    
                 <!-- Dislikes -->
+                <section>
+                    <h3>Не подобається&#x1f61e;</h3>
+                    <p class="tags small">
+                        СОНЦЕ, ІДІОТИ, <a rel="external" href="https://jojo.fandom.com/ru/wiki/%D0%A5%D0%B0%D0%BC%D0%BE%D0%BD">ХАМОН</a>, 
+                        STAR PLATINUM, АТЛАНТИЧНИЙ ОКЕАН, *БУДЬ-ХТО З ПРИСТАВКОЮ "ДЖО" У ІМЕНІ*, ПІДЛІСТЬ, БРОКОЛІ
+                    </p>
+                </section>    
                 <!-- Wants -->
                 <!-- Education -->
                 <!-- Articles -->
