--- a/index.html
+++ b/index.html
@@ -459,6 +459,7 @@
                       <span class="tag">СТАТИ <s>СУПЕРГЕРОЄМ</s> СУПЕРПОГАНЦЕМ <sup>(done)</sup></span>
                     </p>
                 </section>
+                <!-- Impact to pop-culture -->
                 <section>
                     <h3>Вплив на поп-культуру</h3>
                     <ul class="timeline">
