--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="My very own personal website.">
-    <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">  </head>
+    <link rel="stylesheet" href="./css/base.css">  </head>
   <body>
     <header>
         <div class="credits">
