Change border color

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>	
     <main>
       <article>
-        <div class="page" style="border-color: midnightblue;">
+        <div class="page" style="border-color: #123d1e;">
           <div class="stackable grid">
             <div class="row">
               <div class="three wide center aligned column">
