Specify icon path

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="My very own personal website.">
-    <link rel="stylesheet" href="./css/base.css">  </head>
+    <link rel="stylesheet" href="./css/base.css">  
+    <link rel="icon" type="image/x-icon" href="./img/clock.png">
+  </head>
   <body>
     <header>
         <div class="credits">
